Update to latest solr configuration and moved application user to run.sh to allow directory creation from docker